build/errors/testdata/unknown-package.q
import sys

main() {
	sy.exit(0)
}
